--- a/src/Components/Notfound/Notfound.css
+++ b/src/Components/Notfound/Notfound.css
@@ -1,3 +1,10 @@
 .notFound h1 {
     font-size: 60px;
 }
+
+.notFound {
+    display: flex;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+}
